<resources>
    <string name="app_name">BookWeGo</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reservations">Reservations</string>
    <string name="orders">Orders</string>
    <string name="payment_history">Payment History</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="get_in_touch">GET IN TOUCH!</string>
    <string name="always_within_your_reach">Always within your reach</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="order_status">Order Status</string>
    <string name="order_sta">ORDER STATUS</string>
    <string name="order_recived">Order Recived</string>
    <string name="food_being_prepared">Food Being Prepared</string>
    <string name="food_packed">Food Packed</string>
    <string name="food_out_for_delivery">Food out for Delivery</string>
    <string name="food_delivered">Food Delivered</string>
    <string name="signupstartingtext">Don\'t have an account?</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="term_amp_condition"><u>Term &amp; Condition</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports"><u>Reports</u></string>
</resources>
